--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PreviousRecordActivity"></activity>
-        <activity android:name=".LeaveformActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".FacLeaveApprovalActivity"></activity>
+        <activity android:name=".PreviousRecordActivity" />
+        <activity
+            android:name=".LeaveformActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".StartupPage" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".LoginActivity" />
